# bshr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml  setup.cfg
.github/workflows/: python.yml
app/: __init__.py  main.py  tests_pre_start.py
app/alembic/: env.py
app/alembic/versions/: 2022_12_20_0043-5571a5150089_create_table_users.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  api.py
app/api/api_v1/views/: auth.py  login.py  users.py  utils.py
app/core/: __init__.py  auth.py  config.py  security.py
app/crud/: __init__.py  auth.py  base.py  crud_user.py
app/db/: __init__.py  base.py  base_class.py  database.py  redis.py  session.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  auth.py  login.py  user.py
app/tests/: conftest.py  test_main.py
app/tests/core/: test_auth.py  test_config.py
app/tests/crud/: test_base.py  test_import_models.py  test_user.py
app/tests/db/: test_database.py  test_redis.py
app/tests/utils/: user.py  utils.py
app/tests/views/: test_auth.py  test_user.py
app/utils/: __init__.py  database.py  messaging.py  password.py  user.py
bshr/: main.py
bshr/alembic/: env.py
bshr/api/api_v1/: api.py
bshr/core/: config.py
bshr/crud/: base.py  crud_user.py
bshr/db/: base.py  database.py  init_db.py
bshr/models/: __init__.py  user.py
bshr/schemas/: user.py
bshr/utils/: database.py  user.py
requirements/: dev.txt  prod.txt
